add feateure to administrator panel to delete user accounts and change login data